git-annex (3.20111123) UNRELEASED; urgency=low

  * Put a workaround in the directory special remote for strange behavior
    with VFAT filesystems on Linux (mounted with shortname=mixed)
  * Flush json output, avoiding a buffering problem that could result in
    doubled output.
  * Avoid needing haskell98 and other fixes for new ghc. Thanks, Mark Wright.
  * Bugfix: dropunused did not drop keys with two spaces in their name.
  * Support for storing .git/annex on a different device than the rest of the
    git repository.
  * --inbackend can be used to make git-annex only operate on files
    whose content is stored using a specified key-value backend.

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Nov 2011 17:53:42 -0400

git-annex (3.20111122) unstable; urgency=low

  * merge: Improve commit messages to mention what was merged.
  * Avoid doing auto-merging in commands that don't need fully current
    information from the git-annex branch. In particular, git annex add
    no longer needs to auto-merge.
  * init: When run in an already initalized repository, and without
    a description specified, don't delete the old description. 
  * Optimised union merging; now only runs git cat-file once, and runs
    in constant space.
  * status: Now displays trusted, untrusted, and semitrusted repositories
    separately.
  * status: Include all special remotes in the list of repositories.
  * status: Fix --json mode.
  * status: --fast is back
  * Fix support for insteadOf url remapping. Closes: #644278
  * When not run in a git repository, git-annex can still display a usage
    message, and "git annex version" even works.
  * migrate: Don't fall over a stale temp file.
  * Avoid excessive escaping for rsync special remotes that are not accessed
    over ssh.
  * find: Support --print0

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Nov 2011 14:31:45 -0400

git-annex (3.20111111) unstable; urgency=low

  * Handle a case where an annexed file is moved into a gitignored directory,